--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "What's the story behind each item of clothing you buy?",
   "main": "index.js",
-  "repository": "git@github.com:92bondstreet/clear-fashion.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/92bondstreet/clear-fashion.git"
+  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
@@ -18,5 +21,15 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "bugs": {
+    "url": "https://github.com/92bondstreet/clear-fashion/issues"
+  },
+  "homepage": "https://github.com/92bondstreet/clear-fashion#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
