--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.1",
+    "kill": "^0.0.2",
+    "killall": "^1.0.4",
     "mongodb": "^4.3.1",
     "node-fetch": "2.6.6",
     "paginate-info": "^1.0.4",
